fix overflow calligraphy background

--- a/public-website/src/css/index.css
+++ b/public-website/src/css/index.css
@@ -14,6 +14,7 @@ body,
 
 .calligraph-background {
   position: relative;
+  overflow: hidden;
 }
 .calligraph-background::after,
 .calligraph-background::before {
